# so-commons-library

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  Dockerfile  Doxyfile  Makefile  README.md  commons.code-workspace  doxygen.conf  makefile
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: docs.yml  unit-tests.yml
docs/: CMakeLists.txt  Doxyfile  Doxyfile.in  Makefile  conf.py  index.rst  install.rst  makefile  navbar.config.json  package-lock.json  package.json
docs/css/: custom.css  doxygen-awesome.css
docs/html/: header.html
examples/: cunit_def.h  cunit_tools.h  example-list.c  example-log.c  example-string-operactions.c  example-string.c  example-temporal.c  examples.c  test_suites.h  test_tools.h
src/: CMakeLists.txt  error_operations.c  log.c  log.h  makefile  string_operations.c  string_operations.h  temporal.c  temporal.h
src/commons/: .config.c.swp  assert.c  assert.h  bitarray.c  bitarray.h  config.c  config.h  crypto.c  crypto.h  error.c  error.h  error_operations.c  error_operations.h  log.c  log.h  memory.c  memory.h  process.c  process.h  string.c  string.h  string_operations.c  string_utils.c  string_utils.h  temporal.c  temporal.h  txt.c  txt.h
src/commons/collections/: array.c  array.h  collections.h  dictionary.c  dictionary.h  list.c  list.h  node.h  queue.c  queue.h  vector.c  vector.h
tests/: CMakeLists.txt  cunit_def.h  cunit_tools.h  example-log.c  example-string.c  example-temporal.c  test-config.c  test-dictionary.c  test-list.c  test-queue.c  test-string.c  test_array.c  test_bitarray.c  test_config.c  test_dictionary.c  test_list.c  test_queue.c  test_string.c  test_string_utils.c
tests/integration-tests/: CMakeLists.txt
tests/integration-tests/logger/: main.c  makefile
tests/integration-tests/temporal/: main.c  makefile
tests/logger/: main.c
tests/resources/: config.cfg
tests/unit-tests/: CMakeLists.txt  cunit_def.h  makefile  test_bitarray.c  test_config.c  test_crypto.c  test_dictionary.c  test_list.c  test_memory.c  test_queue.c  test_string.c  test_vector.c  tests.c
tests/unit-tests/resources/: config-double-newline.cfg  config.cfg
